# smcd_v1-main

./: README.md
smcd_v1-main/: CMakeLists.txt  smcd.cc
smcd_v1-main/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGenerator.hh  SingleParticleSD.hh
smcd_v1-main/macros/: run 单向能谱离散源.mac  run 各向同性离散源.mac  run 粒子枪，单能单向.mac  run 虚拟各向同性单能源.mac  vis.mac
smcd_v1-main/src/: DetectorConstruction.cc  EventAction.cc  PhysicsList.cc  PrimaryGenertor.cc  RadialEnergyDepositSD.cc  RunAction.cc  SingleParticleSD.cc
